[package]
name = "samovar"
version = "0.1.0"
edition = "2021"
authors = ["Chubak Bidpaa <chubakbidpaa@gmail.com>"]


[dependencies]
lazy_static = "*"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "*"
glob = "*"
content_inspector = "*"
macrovar = { path = "macrovar" }
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
