[package]
name = "samovar"
version = "0.1.0"
edition = "2021"
authors = ["Chubak Bidpaa <chubakbidpaa@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "A low-level HTTP Framework"
repository = "https://github.com/Chubek/Samovar"
keywords = ["web", "http", "framework"]

[dependencies]
lazy_static = "*"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "*"
glob = "*"
content_inspector = "*"

